// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should render 1`] = `
<div
  bsSize={undefined}
  className="Modal"
  show={true}
>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
</div>
`;

exports[`Dialog should render action 1`] = `
<div
  bsSize={undefined}
  className="Modal"
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div
      className="Title"
    >
      Home Loan Account Table Computer
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      role={null}
      type="button"
    >
      <span>
        Practical Fresh Pants
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog should render header 1`] = `
<div
  bsSize={undefined}
  className="Modal"
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div
      className="Title"
    >
      mobile Fish
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
</div>
`;

exports[`Dialog should render large 1`] = `
<div
  backdrop={false}
  bsSize="large"
  className="Modal"
  dialogClassName="customDialogClassName"
  keyboard={true}
  onHide={[Function]}
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div
      className="Title"
    >
      red Chips Soap
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      role={null}
      type="button"
    >
      <span>
        methodology
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog should render small 1`] = `
<div
  backdrop={false}
  bsSize="small"
  className="Modal"
  dialogClassName="customDialogClassName"
  keyboard={true}
  onHide={[Function]}
  show={true}
>
  <div
    className="Header"
    closeButton={true}
  >
    <div
      className="Title"
    >
      Metal deposit
    </div>
  </div>
  <div
    className="Body"
  >
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      role={null}
      type="button"
    >
      <span>
        Tasty Metal Bacon
      </span>
    </button>
  </div>
</div>
`;
